test/parser/invalid-digit-in-nondecimal-literal.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:16: error: invalid digit '8' in octal literal
var a = 0o000378;
